# kvadrat

./: CMakeLists.txt  bag.h  constants.h  csw-alphagrams.txt  formed_words.c  formed_words.h  game_state.c  game_state.h  inputs.c  inputs.h  kwg.h  log.c  log.h  main.c  next.c  next.h  permutation_evaluator.c  playfield.c  playfield.h  square.h  stats.c  stats.h  string_util.c  tetrominos.c  tetrominos.h  util.h  word_bag_maker.c
